k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: starttech-backend-service
spec:
  selector:
    app: starttech-backend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: ClusterIP
